@@ -17,6 +17,10 @@ Changes in @NEW@:
     * A bug that caused conary to traceback in the face of a file on the 
       filesystem with an unknown uid/gid has been fixed, conary will now
       print an error message instead.
+    * A bug that caused conary to traceback when an unknown Use flag was
+      used when cooking has been fixed.  For example, 
+      cvc cook --flavor 'foobar', used to create a traceback, now it says
+      instead 'Error setting build flag values: No Such Use Flag foobar'
 
 Changes in 1.0.12:
   o Client changes:
